connected all the booking methods to thymeleaf